--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,6 +1,7 @@
+  
 .vertical-center{
-    min-height: 80vh;
-
-    display: flex;
-    align-items: center;
+    display:block;
+    width:80%;
+    height:50%;
+    margin:0 auto;
 }
