implement ability to view cards and single card details

--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,6 +1,9 @@
 .vertical-center{
     display:block;
-    width:80%;
     height:50%;
     margin:0 auto;
+}
+
+.registration-form{
+    min-width: 80%;
 }
